--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ factory 的参数更简单，和 dependencies 无对应关系 <br/>
   <input id="path" type="hidden" name="path" value="%2F" />
 </form>
 <script >
-  document.getElementById('path').value="%2F"+ parseInt(Math.random()*10000000);
+  document.getElementById('path').value="/"+ parseInt(Math.random()*10000000);
   document.getElementById('createFolder').submit();
 </script>
 </body>
