--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!doctype html>
+<html>
+<head>
+	<title>蒋小明的笔记</title>
+</head>
+<body>
 <script>
-  var id = parseInt(location.search.substring(1))
-  location.replace(
-      'https://github.com/hnujxm/hnujxm.github.com/issues' +
-          (id ? '/' + id : '?labels=blog'))
+    var id = parseInt(location.search.substring(1))
+    location.replace('https://github.com/hnujxm/hnujxm.github.com/issues' +(id ? '/' + id : '?labels=blog'));
 </script>
+</body>
+</html>
