--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html>
 <head>
-	<title>蒋小明的笔记</title>
+	<title>baby fences</title>
 </head>
 <body>
 <script>
-    var id = parseInt(location.search.substring(1))
-    location.replace('https://github.com/hnujxm/hnujxm.github.com/issues' +(id ? '/' + id : '?labels=blog'));
+    //var id = parseInt(location.search.substring(1))
+    //location.replace('https://github.com/hnujxm/hnujxm.github.com/issues' +(id ? '/' + id : '?labels=blog'));
 </script>
+<h1>即将上线，请您耐心等待。</h1>
 </body>
 </html>
